fix: change jdk